# ChangeLog for dev-util/glade
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.164 2012/05/16 14:25:45 aballier Exp $

*glade-3.13.0 (17 May 2012)

  17 May 2012; Justin Lecher <jlec@gentoo.org>
  +files/glade-3.12.1-doc-version.patch, +glade-3.13.0.ebuild, +metadata.xml:
  Developer Version

  16 May 2012; Alexis Ballier <aballier@gentoo.org> glade-3.8.2.ebuild:
  keyword ~amd64-fbsd

  15 May 2012; Alexis Ballier <aballier@gentoo.org> glade-3.12.1.ebuild:
  keyword ~amd64-fbsd

  09 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> glade-3.12.1.ebuild:
  Add missing build-time deps (bug #415287, thanks to Matt Turner).

  09 May 2012; Matt Turner <mattst88@gentoo.org> glade-3.12.1.ebuild:
  Added ~mips.

*glade-3.12.1 (07 May 2012)

  07 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +glade-3.12.1.ebuild, +files/glade-3.12.1-doc-version.patch:
  Version bump, adds inline margin/alignment editing and support for some
  additional widgets. Improve documentation slotting.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> glade-2.12.2-r1.ebuild,
  glade-3.8.1.ebuild, glade-3.8.2.ebuild, glade-3.10.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Markus Meier <maekke@gentoo.org> glade-3.8.2.ebuild:
  x86 stable, bug #410611

  25 Apr 2012; Markus Meier <maekke@gentoo.org> glade-3.8.2.ebuild:
  arm stable, bug #410611

  19 Apr 2012; Brent Baude <ranger@gentoo.org> glade-3.8.2.ebuild:
  Marking glade-3.8.2 ppc64 stable for bug 410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> glade-3.8.2.ebuild:
  Stable for amd64, wrt bug #410611

*glade-3.8.2 (27 Mar 2012)

  27 Mar 2012; Pacho Ramos <pacho@gentoo.org> +glade-3.8.2.ebuild,
  -glade-3.10.0-r1.ebuild, -glade-3.8.0.ebuild:
  Version bump, remove old.

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> glade-3.8.1.ebuild,
  glade-3.10.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #393007
