@@ -1,15 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-AUX glade-3.12.1-doc-version.patch 1416 RMD160 7bf803676b4caf0029856e94dc218b75ddc5fa97 SHA1 1dbb17f315871757e9daf3a7f78459f0c345b0de SHA256 224a3aca9c9bcd190798a702f603a186155784d207720606ec2c89cc5152bb48
-DIST glade-3.13.0.tar.xz 2476220 RMD160 181317b7b8540e3c04f1567605617f8775766da5 SHA1 b0ba28eebb10cfe8f76a3c84996a0c85aac45869 SHA256 0fda865392cb4a873ec83065bc062e6203cd37a2db764bbbc6ded971bab9a376
-EBUILD glade-3.13.0.ebuild 2103 RMD160 2b1f022208fa20c5aef4233dcae2c30ab4ab31c3 SHA1 f0879d4ec17f4891190ae4460ea9768e9f855d71 SHA256 13fd05cfefd99c6deedf91413d3deaf7eea65f59c87797d8076ccbde4fccb85a
-MISC ChangeLog 21154 RMD160 d80064623592196637c6844aec47ceebedbfffa1 SHA1 992d3337328f0b1ed4959174c5d8b7d53013bae3 SHA256 eff20b1d408c825479fa80f4fec6a3d25ee3f7f4e34a4c6a552a34e7f745c8dd
-MISC metadata.xml 280 RMD160 f1ee8dfbe6e3479f5d22daa4704dfa9e2b623b73 SHA1 508b40e4c8b8900df5d9b4f72c8939e94088e5fd SHA256 dee0faa596c71f338243388b6d193c168ee42bbc62c5647df4ecac0579bfe425
+AUX glade-3.12.1-doc-version.patch 1416 SHA256 224a3aca9c9bcd190798a702f603a186155784d207720606ec2c89cc5152bb48 SHA512 1a630851cf12df54ce68feeb71343f1e7e56df25d8c1c31192307e4f19124a88293428362f35f59ca37cc116c26ce32e8c521415b93e47112f3d513b3afc9e56 WHIRLPOOL 7e860b824ef0aea4de6382dbf35acc1fb562eadcf46b27b04b1612b56fd968e73c9c5a5d862694a7aa100db084d2366575bdb12dfc32c0a4794ca6d91d672122
+DIST glade-3.13.0.tar.xz 2476220 SHA256 0fda865392cb4a873ec83065bc062e6203cd37a2db764bbbc6ded971bab9a376 SHA512 26c67d616539e37087392f5e92aa571a76485745a2e545dd2da9469e4a71e7889c186bcb3497d0fc454a96cb4b3e70f404a644ea4148e437a1b149041a75cef4 WHIRLPOOL d5475664b6bb9bb58b2dde1475eafba752b9367722cfbec67f32d0546dff747f3b688ced26bad071aeaadd52b7d2038c389269b2f5398994313b81ced88bc05f
+EBUILD glade-3.13.0.ebuild 2103 SHA256 13fd05cfefd99c6deedf91413d3deaf7eea65f59c87797d8076ccbde4fccb85a SHA512 15e04d048da46188b4af09c294c77f5aaef3c3e9c3ecab6ca845c34ce9ed8ed5acb577d456aea2375a605ed0e2012951ca13d49014ba11c0f7d270777e3e18ee WHIRLPOOL db777ac048695bef3fcd7ff3c693095ce1ea7d90375ac171a7b893bc9f1149f2ea8eeecaf48799727f460df890274b45155d301beb3b54942e766db4eb9d4740
+EBUILD glade-9999.ebuild 2065 SHA256 5057a21bc92266c244d930630591b9e34a0a99e91b3bf844202e190f3adbf1cc SHA512 7b0fecf1a622198124063410967a17c248bab175876c2c3ef828a201e109dea77f7a9197ed07aae7d88366262ad869d9334b3b45d1153bfc1b080045f3c2e51c WHIRLPOOL d13f384f42e4dfb7246c0f1ea0efab7dc3068e13ca9db1caef2db2453b62df6fa87ccf1c4712469189beb85f04d7f4383d2cac2e5e9f2019df2e1ecdbc2499d1
+MISC ChangeLog 21267 SHA256 313dffbe9e51e5ae0b1c605186fc44467dbb9001cde5d4aba13a8b2cb57e14d7 SHA512 cca11f0c4d738085fc5c5d1675cbc22c9b1b68de6f30fde3434706af385ff1e0d253a7c9f7078b4308f16d717b5842229e813c0800fe4ade95f3c4994704cb13 WHIRLPOOL 648b78acc152331c75921d0b57279a0fc89c83404d1a8dd25d297df8594f2f11cfc78a97fafad8422db5a4cf2531aaad799a731adb7d4b2c012f708843b1ea24
+MISC metadata.xml 280 SHA256 dee0faa596c71f338243388b6d193c168ee42bbc62c5647df4ecac0579bfe425 SHA512 f579f224927b135289dd42f7e9ad521170fc1b12791c27d5b18bf932ce7c312230254b502180ea6f3e64b54face1a63ea7046951bce29a55ccad205a05744f16 WHIRLPOOL e436b2fd0c48a2e5bc1184f873d69573016c99b6f6edfcf6b368137ad53907cd415ef77904404982c0db4f7d44408a30992af114cba5988f16b4064001a8a6f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk+0ydkACgkQgAnW8HDreRaxXgCgw7JVENg1zQu7F8K6GG8sxHO/
-Q78AnibwVC3mO0XPZ9wGVWUzOYmQmqeu
-=mTpn
+iEYEAREKAAYFAk/Rqj8ACgkQgAnW8HDreRYq1wCcCapva114GExMMm0RGdmG0N2y
+GZcAoL5TFogVg7WwzcDn7/dZ1+R6O7YM
+=EB3i
 -----END PGP SIGNATURE-----
