@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.164 2012/05/16 14:25:45 aballier Exp $
 
+*glade-9999 (08 Jun 2012)
+
+  08 Jun 2012; Justin Lecher <jlec@gentoo.org> +glade-9999.ebuild:
+  Add live ebuild
+
 *glade-3.13.0 (17 May 2012)
 
   17 May 2012; Justin Lecher <jlec@gentoo.org>
